--- a/Demo/Demo.ConsoleApp/appSettings.json
+++ b/Demo/Demo.ConsoleApp/appSettings.json
@@ -1,40 +1,93 @@
 {
-  "HttpClientPolicies": [
-    {
-      "Name": "ClientA",
+  "ClientA": {
+    "HttpClient": {
       "BaseAddress": "https://localhost:7276/",
-      "TimeoutInSeconds": 5,
-      "RetryCount": 3,
-      "RetryDelayInSeconds": 2,
-      "CircuitBreakerDurationInSeconds": 30,
-      "CircuitBreakerSamplingDurationInSeconds": 60,
-      "CircuitBreakerFailureRatio": 50,
-      "CircuitBreakerMinimumThroughput": 5,
-      "MaxConcurrentCalls": 10
-    },
-    {
-      "Name": "ClientB",
-      "BaseAddress": "https://localhost:7277/",
-      "UseDefaultPipeline": true
-      //"TimeoutInSeconds": 5,
-      //"RetryCount": 10,
-      //"RetryDelayInSeconds": 2,
-      //"CircuitBreakerDurationInSeconds": 10,
-      //"CircuitBreakerSamplingDurationInSeconds": 60,
-      //"CircuitBreakerFailureRatio": 50,
-      //"CircuitBreakerMinimumThroughput": 5,
-      //"MaxConcurrentCalls": 10
+      "UseStandardResiliencePipeline": false,
+      "LoggingEnabled": false,
+      "CustomResiliencePipeline": [
+        {
+          "Policy": "ConcurrencyLimiter",
+          "Parameters": {
+            "MaxConcurrentCalls": 10
+          }
+        },
+        {
+          "Policy": "Timeout",
+          "Parameters": {
+            "TimeoutInSeconds": 15
+          }
+        },
+        {
+          "Policy": "Retry",
+          "Parameters": {
+            "MaxAttempts": 10,
+            "DelayInSeconds": 2
+          }
+        },
+        {
+          "Policy": "CircuitBreaker",
+          "Parameters": {
+            "DurationInSeconds": 30,
+            "SamplingDurationInSeconds": 60,
+            "FailureRatio": 50,
+            "MinimumThroughput": 1000
+          }
+        }
+      ]
     }
-  ],
+  },
+  "ClientB": {
+    "HttpClient": {
+      "BaseAddress": "https://localhost:7277/",
+      "UseStandardResiliencePipeline": false,
+      "LoggingEnabled": true,
+      "CustomResiliencePipeline": [
+        {
+          "Policy": "Timeout",
+          "Parameters": {
+            "TimeoutInSeconds": 5
+          }
+        },
+        {
+          "Policy": "Retry",
+          "Parameters": {
+            "MaxAttempts": 3,
+            "DelayInSeconds": 2
+          }
+        },
+        {
+          "Policy": "CircuitBreaker",
+          "Parameters": {
+            "DurationInSeconds": 30,
+            "SamplingDurationInSeconds": 60,
+            "FailureRatio": 50,
+            "MinimumThroughput": 5
+          }
+        },
+        {
+          "Policy": "ConcurrencyLimiter",
+          "Parameters": {
+            "MaxConcurrentCalls": 1
+          }
+        }
+      ]
+    }
+  },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Enrichers.Thread", "Serilog.Enrichers.Process", "Serilog.Enrichers.Environment" ],
-    "MinimumLevel": "Verbose",
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Enrichers.Thread", "Serilog.Enrichers.Process", "Serilog.Enrichers.Environment", "Serilog.Expressions" ],
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": { "expression": "StartsWith(SourceContext, 'System.Net.Http.HttpClient') or StartsWith(SourceContext, 'Polly') " }
+      }
+    ],
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "{EnvironmentName} {ProcessId} {ThreadId} {Timestamp:HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{EnvironmentName} {ProcessId} {ThreadId} {SourceContext} {Timestamp:HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
