--- a/Demo/Demo.ConsoleApp/appSettings.json
+++ b/Demo/Demo.ConsoleApp/appSettings.json
@@ -1,9 +1,13 @@
 {
   "ClientA": {
     "HttpClient": {
+      "BaseAddress": "https://localhost:7277/",
+      "UseStandardResiliencePipeline": false
+    }
+  },
+  "ClientB": {
+    "HttpClient": {
       "BaseAddress": "https://localhost:7276/",
-      "UseStandardResiliencePipeline": false,
-      "LoggingEnabled": false,
       "CustomResiliencePipeline": [
         {
           "Policy": "ConcurrencyLimiter",
@@ -31,43 +35,6 @@
             "SamplingDurationInSeconds": 60,
             "FailureRatio": 50,
             "MinimumThroughput": 1000
-          }
-        }
-      ]
-    }
-  },
-  "ClientB": {
-    "HttpClient": {
-      "BaseAddress": "https://localhost:7277/",
-      "UseStandardResiliencePipeline": false,
-      "LoggingEnabled": true,
-      "CustomResiliencePipeline": [
-        {
-          "Policy": "Timeout",
-          "Parameters": {
-            "TimeoutInSeconds": 5
-          }
-        },
-        {
-          "Policy": "Retry",
-          "Parameters": {
-            "MaxAttempts": 3,
-            "DelayInSeconds": 2
-          }
-        },
-        {
-          "Policy": "CircuitBreaker",
-          "Parameters": {
-            "DurationInSeconds": 30,
-            "SamplingDurationInSeconds": 60,
-            "FailureRatio": 50,
-            "MinimumThroughput": 5
-          }
-        },
-        {
-          "Policy": "ConcurrencyLimiter",
-          "Parameters": {
-            "MaxConcurrentCalls": 1
           }
         }
       ]
